# flasgo

./: .gitignore  CHANGELOG.md  MIGRATING_FROM_FLASK.md  README.md  SECURITY.md  pyproject.toml  release.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  release-pypi.yml  scorecards.yml
.junie/: guidelines.md
fango/: __init__.py  app.py  auth.py  exceptions.py  globals.py  openapi.py  request.py  response.py  routing.py  security.py  server.py  session.py  settings.py  ssrf.py  testing.py  types.py
flasgo/: __init__.py  app.py  cli.py  debug.py  exceptions.py  globals.py  ratelimit.py  request.py  response.py  security.py  server.py  session.py  settings.py  ssrf.py  templating.py
flasgo/debug_templates/: debug_error.css  debug_error.html
tests/: test_app.py  test_cli.py  test_debug.py  test_docs.py  test_documentation.py  test_features.py  test_hardening.py  test_server.py  test_ssrf.py  test_templating.py
