[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flasgo"
version = "0.4.1"
description = "Async-first Python web framework with Flask ergonomics and Django-inspired security defaults."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BSD 3-Clause" }
authors = [{ name = "Jay Townsend" }]
maintainers = [{ name = "Jay Townsend" }]
keywords = ["asgi", "async", "flasgo", "framework", "jinja2", "security", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "uvicorn[standard]==0.42.0",
    "Jinja2==3.1.6",
    "watchfiles==1.1.1",
]

[project.urls]
Homepage = "https://github.com/L1ghtn1ng/flasgo"
Documentation = "https://github.com/L1ghtn1ng/flasgo#readme"
Repository = "https://github.com/L1ghtn1ng/flasgo"
Issues = "https://github.com/L1ghtn1ng/flasgo/issues"
Releases = "https://github.com/L1ghtn1ng/flasgo/releases"
License = "https://github.com/L1ghtn1ng/flasgo/blob/main/LICENSE"

[project.scripts]
flasgo = "flasgo.cli:main"

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.6",
  "ty==0.0.22",
]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["flasgo", "tests"]

[tool.ruff.lint]
select = ["E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
