[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flasgo"
version = "0.5.2"
description = "Async-first Python web framework with Flask ergonomics and Django-inspired security defaults."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BSD 3-Clause" }
authors = [{ name = "Jay Townsend" }]
maintainers = [{ name = "Jay Townsend" }]
keywords = ["asgi", "async", "flasgo", "framework", "jinja2", "security", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "uvicorn[standard]==0.49.0",
    "Jinja2==3.1.6",
    "watchfiles==1.2.0",
]

[project.urls]
Homepage = "https://flasgo.dev"
Documentation = "https://flasgo.dev"
Repository = "https://github.com/L1ghtn1ng/flasgo"
Issues = "https://github.com/L1ghtn1ng/flasgo/issues"
Releases = "https://github.com/L1ghtn1ng/flasgo/releases"
License = "https://github.com/L1ghtn1ng/flasgo/blob/main/LICENSE"

[project.scripts]
flasgo = "flasgo.cli:main"

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.17",
  "ty==0.0.53",
]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["flasgo", "tests"]

[tool.ruff.lint]
select = ["E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
